tests/unit/compile/cases/syntax-errors/25.tag-expr-string-escape-control.t
Lorem { "ipsum \
dolor" } sit
---- THROW% ----
Unexpected <ws "
">; expected: <U>, <u>, <X>, <x>, <EscapeCodePunctuation> or <EscapeCodeSingleLetter> near `
dolor" } sit`
